--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/satanas/js13k",
   "devDependencies": {
     "gulp": "^3.8.7",
+    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.3.5",
+    "gulp-minify-css": "^0.3.8",
     "gulp-uglify": "^1.0.1"
   }
 }
