--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/satanas/js13k",
   "devDependencies": {
+    "glob": "^4.0.5",
     "gulp": "^3.8.7",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.3.5",
