--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-concat": "^2.3.5",
     "gulp-minify-css": "^0.3.8",
     "gulp-minify-html": "^0.1.5",
-    "gulp-uglify": "^1.0.1"
+    "gulp-uglify": "^1.0.1",
+    "gulp-zip": "^2.0.1"
   }
 }
